--- a/index.html
+++ b/index.html
@@ -124,22 +124,89 @@
             </div>
         </section>
         <!-- super client section -->
-        <section class="my-24 flex flex-col lg:flex-row bg-gradient-to-r from-[#FF8938] to-[#F00] px-16 py-24 rounded-lg gap-12">
-            <div class="space-y-5">
+        <section class="my-24 flex justify-between flex-col lg:flex-row bg-gradient-to-r from-[#FF8938] to-[#F00] px-16 py-24 rounded-lg gap-12">
+            <div class="flex justify-center items-center">
+              <div class="space-y-5 w-96">
                 <h3 class="text-[#F4F4F4] text-4xl font-extrabold">Meet Our Super <br>
                      Clients</h3>
                 <p class="text-[#F4F4F4]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
                 <button class="bg-[#FFF] px-7 py-3 text-red-500 rounded-lg">Show All</button>
             </div>
-            <div>
-                <!-- client review -->
-                <div class="bg-[#fff] p-10 rounded-lg relative">
-                    <img class="absolute -left-5 -top-5" src="./images/client.png" alt="">
+            </div>
+            <div class="relative">
+                <!-- client review 1 -->
+                <div class="bg-[#fff] mb-10 z-10 p-10 rounded-lg relative opacity-50 lg: w-80">
+                    <img class="absolute -left-5 -top-5 border-4 border-white bg-white rounded-full" src="./images/client.png" alt="">
                     <p class="mb-5 text-[#777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
                     <h4 class="font-bold text-[#1C1C1C]">Ilham Yuda</h4>
                     <p class="text-[#5D5A6F]">Businessman</p>
+                    <div class="flex justify-end">
+                      <img src="./images/circles.png" alt="">
+                    </div>
+                </div>
+                <!-- client review 2 -->
+                <div class="bg-[#fff] p-10 z-20 rounded-lg absolute top-24 lg:-left-16 lg: w-80">
+                    <img class="absolute -left-5 -top-5 border-4 border-white bg-white rounded-full" src="./images/client.png" alt="">
+                    <p class="mb-5 text-[#777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                    <h4 class="font-bold text-[#1C1C1C]">Ilham Yuda</h4>
+                    <p class="text-[#5D5A6F]">Businessman</p>
+                    <div class="flex justify-end">
+                      <img src="./images/circles.png" alt="">
+                    </div>
+                </div>
+                <!-- client review 3 -->
+                <div class="bg-[#fff] z-10 p-10 rounded-lg relative opacity-50 lg: w-80">
+                    <img class="absolute -left-5 -top-5 border-4 border-white bg-white rounded-full" src="./images/client.png" alt="">
+                    <p class="mb-5 text-[#777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                    <h4 class="font-bold text-[#1C1C1C]">Ilham Yuda</h4>
+                    <p class="text-[#5D5A6F]">Businessman</p>
+                    <div class="flex justify-end">
+                      <img src="./images/circles.png" alt="">
+                    </div>
                 </div>
             </div>
+        </section>
+        <!-- news and events section -->
+        <section class="my-24">
+          <h3 class="text-center text-5xl font-extrabold text-[#1C1C1C] mb-4">News & Events</h3>
+          <p class="text-[#777] text-center lg:max-w-4xl mx-auto mb-10">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+          <div class="grid  grid-cols-1  md:grid-cols-2 lg:grid-cols-3 gap-6">
+            <!-- events card1 -->
+            <div class="card w-96 bg-white p-5 space-y-4">
+              <figure><img src="./images/news-1.png" alt="Shoes" /></figure>
+              <div class="card-body flex justify-start">
+                    <p>Feb 05, 2027</p>
+                  <h2 class="text-xl font-extrabold">Collecting 8 points for <br> discount</h2>
+                  <p>There are many variations of passages of <br> Lorem Ipsum available.</p>
+                  <div>
+                    <button class="font-medium">Learn More</button>
+                  </div>
+                </div>
+              </div>
+            <div class="card w-96 bg-white p-5 space-y-4">
+              <figure><img src="./images/news-2.png" alt="Shoes" /></figure>
+              <div class="card-body flex justify-start">
+                    <p>Feb 05, 2027</p>
+                  <h2 class="text-xl font-extrabold">Collecting 8 points for <br> discount</h2>
+                  <p>There are many variations of passages of <br> Lorem Ipsum available.</p>
+                  <div>
+                    <button class="font-medium">Learn More</button>
+                  </div>
+                </div>
+              </div>
+            <div class="card w-96 bg-white p-5 space-y-4">
+              <figure><img src="./images/news-3.png" alt="Shoes" /></figure>
+              <div class="card-body flex justify-start">
+                    <p>Feb 05, 2027</p>
+                  <h2 class="text-xl font-extrabold">Collecting 8 points for <br> discount</h2>
+                  <p>There are many variations of passages of <br> Lorem Ipsum available.</p>
+                  <div>
+                    <button class="font-medium">Learn More</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </section>
     </main>
     <footer>
