--- a/index.html
+++ b/index.html
@@ -36,15 +36,18 @@
 </head>
 <body class="manrope-font">
     <header class="container mx-auto">
-        <div class="hero">
-            <div class="hero-content flex-col lg:flex-row">
+        <div class="">
+            <div class="flex justify-between items-center flex-col lg:flex-row">
               
               <div class="flex-1">
                 <h1 class="text-3xl font-bold lg:text-7xl font-extrabold">It's good <br>
                     tea time at The <br>
                      Tea House</h1>
                 <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
-                <button class="btn btn-primary">Explore More</button>
+                <button class="btn bg-gradient-to-r from-[#FF8938] to-[#F00] text-white">
+                  Explore More
+                  <i class="fa-solid fa-arrow-trend-up"></i>
+                </button>
               </div>
               <div class="relative">
                 <img class="flex-1" src="./images/banner.png" class="max-w-sm" />
@@ -209,8 +212,52 @@
           </div>
         </section>
     </main>
-    <footer>
-
+    <footer class="my-24 px-5 lg:px-52 py-28 text-base-content bg-gradient-to-r from-[#FF00001A] to-[#FF89381A] mb-0">
+      <div class="flex mb-20 flex-col lg:flex-row justify-between ">
+        <img class="w-16" src="./images/cup.png" alt="">
+        <p class="flex items-center gap-10 flex-col lg:flex-row  ">
+          <span>Ready to get started?</span>
+          <button class="bg-gradient-to-r from-[#FF8938] to-[#F00] px-6 py-4 text-white rounded-lg">Get Started</button>
+        </p>
+      </div>
+     <div class="footer">
+      <nav>
+        <header class="footer-title">Services</header> 
+        <a class="link link-hover">Branding</a>
+        <a class="link link-hover">Design</a>
+        <a class="link link-hover">Marketing</a>
+        <a class="link link-hover">Advertisement</a>
+      </nav> 
+      <nav>
+        <header class="footer-title">Company</header> 
+        <a class="link link-hover">About us</a>
+        <a class="link link-hover">Contact</a>
+        <a class="link link-hover">Jobs</a>
+        <a class="link link-hover">Press kit</a>
+      </nav> 
+      <nav>
+        <header class="footer-title">Legal</header> 
+        <a class="link link-hover">Terms of use</a>
+        <a class="link link-hover">Privacy policy</a>
+        <a class="link link-hover">Cookie policy</a>
+      </nav> 
+      <form>
+        <header class="footer-title">Newsletter</header> 
+        <fieldset class="form-control w-80">
+          <label class="label">
+            <span class="label-text">Enter your email address</span>
+          </label> 
+          <div class="join">
+            <input type="text" placeholder="username@site.com" class="py-4 input bg-transparent outline-none border-b-4 border-x-0 border-t-0 border-l-0 border-black" /> 
+            <button class="btn bg-gradient-to-r from-[#FF8938] to-[#F00] rounded-full "><i class="fa-solid fa-chevron-right"></i></button>
+          </div>
+        </fieldset>
+      </form>
+      
+     </div>
+     <aside class="mt-10 text-center">
+        <p>© 2027 UIDesign.to - All rights reserved.</p>
+      </aside>
     </footer>
 </body>
 </html>
